sventon change history
-----------------------------------------------------------------------------------------

[1308] Fixed: Bug #14129 - Multi-byte characters not correctly rendered in source files.

[1291] Release 1.4 RC5 (2008-05-25)
[1288] Fixed: Bug #13881 - RSS component not working when using user based auth.
[1286] Fixed: Bug #13870 - Not possible to link to a specific row.
[1276] Fixed: Bug #13707 - Entry tray remove link broken for non-head entries.

[1270] Release 1.4 RC4 (2008-04-20)
[1265] Fixed: Bug #13640 - Diff crashes if the file starts with a new line character.
[1263] Fixed: Bug #13622 - Diff with previous revision not working for moved files.
[1249] Fixed: Bug #13388 - Keywords are not expanded in raw file view.
[1248] Fixed: Bug #13389 - Keyword expansion values not properly escaped.

[1242] Release 1.4 RC3 (2008-03-10)
[1236] Fixed: Bug #13325 - Search box too far on the right.
[1230] Added: Feature #4035 - Loosen restrictions on instance name.
[1228] Fixed: Bug #13308 - Validation error of instance name not handled properly.

[1223] Release 1.4 RC2 (2008-03-06)
[1219] Fixed: Bug #13268 - Peg revision not honored by RSS creator.
[1218] Fixed: Bug #13244 - Error during population of log message cache.

[1212] Release 1.4 RC1 (2008-02-19)
[1152] Added: Upgraded to Spring 2.5.1
[1145] Added: Feature #3999 - Inline diff view.
[1144] Fixed: Bug #9716 - Incorrect diff.
[1135] Fixed: Bug #6387 - Markup of changed file in logs view fails if it's renamed.
[1133] Added: Feature #2750 - Add help text divs.
[1131] Added: Upgraded to Lucene 2.2.0.
[1104] Added: Feature #3943 - Send notification mail for new revisions.
[1092] Added: Feature #3931 - Easy navigation between file revisions.
[1077] Added: Feature #3928 - Possibility to set an URL for display.
[1047] Added: Feature #3900 - Change behaviour when searching entries.
[1044] Fixed: Bug #12698 - Highlighting problem when searching using wildcards.